2 часть проекта sharemate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=sharemate
+
+spring.datasource.url = jdbc:postgresql://localhost:5432/sharemate
+
+spring.datasource.username = postgres
+
+spring.datasource.password = Present423
+
+spring.sql.init.mode=always
+
